Removed deprecated options, support for JDK 24.
Flags cuc dep trai by meowice uwu